k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component:  nginx
  template:
    metadata:
      labels:
        component: nginx

    spec:
      containers:
        - name: nginx
          image: miladkhodabandehloo/go-nginx
          ports:
            - containerPort: 80
