k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component:  postgres

  template:
    metadata:
      labels:
        component:  postgres
    spec:
      volumes:
        - name: postgres-sotrage
          persistentVolumeCliam:
            cliamName: database-persistent-volume-claim
      containers:
        - name:  db-server
          image:  postgres
          ports:
            - containerPort: 5432
