k8s/nginx-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: nginx
  ports:
    - port: 80
      targetPort: 80
